<resources>
    <string name="app_name">From2</string>
    <string name="hint_enter_your_text">Enter your text here...</string>
    <string name="hint_ouput_will_be_here">Your translation will be here</string>
    <string name="uzbek">UZBEK</string>
    <string name="karakalpak">KARAKALPAK</string>
    <string name="translate">Translate</string>
    <string name="lorem"> loremipsumloremipsum loremipsumloremipsum loremipsumloremipsum loremipsumloremipsum</string>
</resources>