<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurfaceDim"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_from_language"
            style="@style/PrimaryButton"
            android:backgroundTint="?colorSurface"
            android:textColor="?colorOnSurface"
            android:text="@string/uzbek"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.Icon"
            android:backgroundTint="?colorSurface"
            app:iconTint="?colorOnSurface"
            app:icon="@drawable/round_compare_arrows_24"
            android:layout_width="48dp"
            android:layout_height="wrap_content" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_to_language"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:backgroundTint="?colorSurface"
            android:textColor="?colorOnSurface"
            android:text="@string/karakalpak"
            android:layout_weight="1"
            android:layout_height="wrap_content" />


    </com.google.android.material.button.MaterialButtonToggleGroup>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/shape_translate_input_field"
        android:orientation="vertical"
        android:padding="8dp">

        <View
            android:id="@+id/icon_clear_top_input"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:background="@drawable/round_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_text_top_input"
            app:layout_constraintTop_toTopOf="@id/edit_text_top_input" />


        <EditText
            android:id="@+id/edit_text_top_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_your_text"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toStartOf="@id/icon_clear_top_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_translate"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/translate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_top_input" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_translate_input_field"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edit_text_bottom_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_ouput_will_be_here"
            android:minLines="5"
            android:padding="8dp"
            android:scrollbars="vertical" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <View
            android:id="@+id/view_copy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/round_content_copy_24"
            android:backgroundTint="?colorSurfaceBright" />

        <View
            android:id="@+id/view_share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/round_share_24"
            android:backgroundTint="?colorSurfaceBright" />

    </LinearLayout>

</LinearLayout>